[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical_pilot"
version = "0.1.0"
description = "ClinicalPilot — OpenEnv environment for clinical trial protocol design"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "trl>=0.9.0",
    "peft>=0.11.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "matplotlib>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["clinical_pilot*"]
